objects/APTS_Admin_Cost_BreakUp__c.object
<CustomObject>
    <fields>
        <fullName>APTS_BALID__c</fullName>
        <label>BALID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Cost_Name__c</fullName>
        <label>Cost Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Direct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Driver_Non_Driver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Driver / Non-Driver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_IsPricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Level__c</fullName>
        <label>Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Parent_Cost_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Cost Category</label>
        <referenceTo>APTS_Admin_Cost_BreakUp__c</referenceTo>
        <relationshipLabel>Admin Cost BreakUps</relationshipLabel>
        <relationshipName>Admin_Cost_BreakUps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Tree_Sequence__c</fullName>
        <label>Tree Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cost Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Category</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Variable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Visibility for the cost item set by different admins</description>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Admin Cost BreakUp</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>APTS_Cost_Name__c</columns>
        <columns>APTS_Parent_Cost_Category__c</columns>
        <columns>APTS_Sequence__c</columns>
        <columns>APTS_Level__c</columns>
        <columns>APTS_Tree_Sequence__c</columns>
        <columns>APTS_IsPricing__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CB-{0000000000}</displayFormat>
        <label>Admin Cost Breakup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admin Cost BreakUps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>